// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicUsageExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`ControlledExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    点击
  </button>
</DocumentFragment>
`;

exports[`PlacementsExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    Left
  </button>
  <button
    class="t-button t-button--line"
    style="margin-left: 8px;"
  >
    Top
  </button>
  <button
    class="t-button t-button--line"
    style="margin-left: 8px;"
  >
    Bottom
  </button>
  <button
    class="t-button t-button--line"
    style="margin-left: 8px;"
  >
    Right
  </button>
</DocumentFragment>
`;

exports[`TriggersExample.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--line"
  >
    Hover me
  </button>
  <button
    class="t-button t-button--line"
    style="margin-left: 8px;"
  >
    Focus me
  </button>
  <button
    class="t-button t-button--line"
    style="margin-left: 8px;"
  >
    Click me
  </button>
  <button
    class="t-button t-button--line"
    style="margin-left: 8px;"
  >
    Right Click me
  </button>
</DocumentFragment>
`;
